# setman-rs

./: .gitignore  Applications.toml  Cargo.toml  LICENSE  Makefile.toml  README.md  TODO.md  git.toml  setman.json  tmp.toml
src/: args.rs  config.rs  fileman.rs  gitman.rs  logger.rs  main.rs  paths.rs  readline.rs  setman.rs
