[package]
name = "setman-rs"
version = "0.1.0"
authors = ["mWalrus <hellkvistoskar@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
home = "0.5.3"
colored = "2"
toml = "0.5.3"
serde = {version = "1.0.125", features = ["derive"]}
rustyline = "8.0.0"
git2 = "0.13.17"
uuid = {version = "0.4", features = ["v4"]}
dialoguer = "0.8.0"
